# docs/swagger.json
@@ -6168,8 +6168,14 @@
                 "permissions": {
                     "type": "string"
                 },
+                "revoke_reason": {
+                    "type": "string"
+                },
                 "revoked_at": {
                     "type": "string"
+                },
+                "revoked_by": {
+                    "type": "integer"
                 },
                 "usage_count": {
                     "type": "integer"
